--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -1,9 +1,18 @@
 \chapter{Introduction}
 \section{Motivation}
-\subsection{Current situation}
-An essential part of economic counselling is the assessment of allocated spending for different segments of a company. Spending of a firm usually is written down in invoice documents, which have to be grouped for segments to analyze their costs.
-While the global market is estimated to comprise 550 billion invoices annually, 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper- or document based (PDF, docx, odt) files can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data [2]. This data is not leverageable with traditional data analysis tools, but its value must be harvested for companies to utilize their full potential. A large share of unstructured data found in companies is textual data. \cite{turing1950}
 
-\subsection{Importance}
-\section{Research Question}
+An invoice is a document recording the main information regarding a sales transaction. Usually, an invoice contains the unit cost, a timestamp and the payment terms. Other information, such as shipping terms, shipping adress or payment conditions may also be included.
+
+Apart from their use for tax records, tracking the inventory and legal protection, invoices are essential for a company's external and internal financial reporting (controlling). They are the main source of information for controlling \cite{investopediaInvoices}, as they record the complete financial history of cash flow \cite{invoicesPurpose}. In general, interal financial reporting aims to provide information about the health of a company and supply means for improvement for a company's financials. In turn, this requires an in-depth analysis of spending.
+
+According to \cite{manualInvoiceProcessing}, more than 4 out of 5 financial departments are "overwhelmed by the high numbers of invoices they are expected to process". Already overwhelmed departments of course struggle with providing information on savings potential. A solution for processing large amounts of invoice data with minimal human interference is desirable. With analysis results, financial advisors have a factual base for recommendations.
+
+\section{Current situation}
+An essential part of economic counselling is the assessment of allocated spending for different segments of a company. Spending of a firm usually is written down in invoice documents, which have to be grouped for segments to analyze their costs.
+While the global market is estimated to comprise 550 billion invoices annually, 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. This data is not leverageable with traditional data analysis tools, but its value must be harvested for companies to utilize their full potential. A large share of unstructured data found in companies is textual data.
+
+\section{Research Questions}
+Which methods exist for clustering large-scale multilingual corpora? Which combinations of feature-selection methods and clustering methods return the most valuable information?
+
 \section{Outline}
+\textcolor{red}{This should be written at the end since it's very prone to changes.}
