--- a/Inhalt/04_Inhalt/practical.tex
+++ b/Inhalt/04_Inhalt/practical.tex
@@ -2,12 +2,17 @@
 
 \section{Dataset selection}
 
-\section{Data Retrieval}
-
 \section{Data preparation}
 
 	\subsection{Data processing and data wrangling}
-	
+	\lstinputlisting[
+	label=code:WhileLoop,    % Label; genutzt für Referenzen auf dieses Code-Beispiel
+	caption=Algorithmus zum Schätzen einer Zahl in Python,
+	captionpos=b,               % Position, an der die Caption angezeigt wird t(op) oder b(ottom)
+	style=EigenerPythonStyle,   % Eigener Style der vor dem Dokument festgelegt wurde
+	firstline=0,                % Zeilennummer im Dokument welche als erste angezeigt wird
+	lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen wird
+	]{Quellcode/json-schema.json}
 	
 	\subsection{Data cleaning}
 	
