--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,4 +1,19 @@
 
+@misc{AIOverviewResearch,
+  title = {{{AI Overview Research}}},
+  journal = {AI Overview},
+  howpublished = {https://www.sap.com/products/artificial-intelligence/research.html}
+}
+
+@article{beyerNearestNeighbor,
+  title = {When {{Is}} ``{{Nearest Neighbor}}'' {{Meaningful}}?},
+  author = {Beyer, Kevin and Goldstein, Jonathan and Ramakrishnan, Raghu and Shaft, Uri},
+  pages = {19},
+  abstract = {We explore the effect of dimensionality on the ``nearest neighbor'' problem. We show that under a broad set of conditions (much broader than independent and identically distributed dimensions), as dimensionality increases, the distance to the nearest data point approaches the distance to the farthest data point. To provide a practical perspective, we present empirical results on both real and synthetic data sets that demonstrate that this effect can occur for as few as 10-15 dimensions.},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/JNTP4SFM/Beyer et al. - When Is “Nearest Neighbor” Meaningful.pdf}
+}
+
 @book{buxmannKI2019,
   title = {{K\"unstliche Intelligenz: mit Algorithmen zum wirtschaftlichen Erfolg}},
   shorttitle = {{K\"unstliche Intelligenz}},
@@ -52,6 +67,25 @@
   howpublished = {https://www.sap.com/germany/about/company/history/1972-1980.html}
 }
 
+@misc{investopediaInvoices,
+  title = {Understanding {{Invoices}}},
+  journal = {Investopedia},
+  abstract = {An invoice records itemized transactions and is used for expense management and bookkeeping.},
+  howpublished = {https://www.investopedia.com/terms/i/invoice.asp},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/6IKKUTWY/invoice.html}
+}
+
+@misc{invoicesPurpose,
+  title = {What {{Is}} the {{Purpose}} of an {{Invoice}}? | {{Invoicing Tips}} for {{Small Business}}},
+  shorttitle = {What {{Is}} the {{Purpose}} of an {{Invoice}}?},
+  journal = {FreshBooks},
+  abstract = {The purpose of an invoice is to create a record of sale so businesses can get paid. Learn how professional invoices help small businesses receive payment faster.},
+  howpublished = {https://www.freshbooks.com/hub/invoicing/how-do-invoices-work},
+  langid = {american},
+  file = {/Users/I518232/Zotero/storage/AT8VLUY8/how-do-invoices-work.html}
+}
+
 @misc{JuergenMuellerBiography,
   type = {Company {{Website}}},
   title = {Juergen {{Mueller}} Biography},
@@ -66,6 +100,50 @@
   pages = {7},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
+}
+
+@misc{manualInvoiceProcessing,
+  title = {It's Costing How Much? {{The}} Truth about Manual Invoice Processing},
+  shorttitle = {It's Costing How Much?},
+  author = {{SME}},
+  year = {2018},
+  month = may,
+  journal = {SME Magazine},
+  abstract = {By Daniel Ball, director, Wax Digital The paper-based invoice \textendash{} the thorn in the side of every finance team but a necessary part of doing business. In},
+  langid = {british},
+  file = {/Users/I518232/Zotero/storage/HET2JSWY/costing-much-truth-manual-invoice-processing.html}
+}
+
+@inproceedings{mikolovDistributedRepresentationsWords2013,
+  title = {Distributed {{Representations}} of {{Words}} and {{Phrases}} and Their {{Compositionality}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  year = {2013},
+  volume = {26},
+  publisher = {{Curran Associates, Inc.}},
+  file = {/Users/I518232/Zotero/storage/LKTG7ZQV/Mikolov et al. - 2013 - Distributed Representations of Words and Phrases a.pdf}
+}
+
+@misc{modernInvoiceManagement,
+  title = {Invoice Management for Modern Businesses: {{A}} Guide},
+  shorttitle = {Invoice Management for Modern Businesses},
+  author = {Whatman, Patrick},
+  abstract = {Invoice management hasn't kept up with the times. In most companies, it's still harder than it should be to pay suppliers quickly and easily. This guide will fix that.},
+  howpublished = {https://blog.spendesk.com/en/invoice-management},
+  langid = {british},
+  file = {/Users/I518232/Zotero/storage/T39ZUH2P/invoice-management.html}
+}
+
+@article{robertsonTFIDF,
+  title = {Understanding Inverse Document Frequency: {{On}} Theoretical Arguments for {{IDF}}},
+  shorttitle = {Understanding Inverse Document Frequency},
+  author = {Robertson, Stephen},
+  year = {2004},
+  journal = {Journal of Documentation},
+  volume = {60},
+  pages = {2004},
+  abstract = {The term weighting function known as IDF was proposed in 1972, and has since been extremely widely used, usually as part of a TF*IDF function. It is often described as a heuristic, and many papers have been written (some based on Shannon's Information Theory) seeking to establish some theoretical basis for it. Some of these attempts are reviewed, and it is shown that the Information Theory approaches are problematic, but that there are good theoretical justifications of both IDF and TF*IDF in traditional probabilistic model of information retrieval.},
+  file = {/Users/I518232/Zotero/storage/XCFQKQIS/Robertson - 2004 - Understanding inverse document frequency On theor.pdf;/Users/I518232/Zotero/storage/7JXSAWQ5/summary.html}
 }
 
 @misc{rutschmannSAPLeonardo2021,
@@ -91,6 +169,18 @@
   langid = {german}
 }
 
+@misc{structuredAndUnstructuredData,
+  title = {Structured vs {{Unstructured Data}} 101: {{Top Guide}}},
+  shorttitle = {Structured vs {{Unstructured Data}} 101},
+  year = {2021},
+  month = may,
+  journal = {Datamation},
+  abstract = {Structured Data is organized \& often formatted, and Unstructured Data is raw data of various types. Learn key differences \& how each is used.},
+  howpublished = {https://www.datamation.com/big-data/structured-vs-unstructured-data/},
+  langid = {american},
+  file = {/Users/I518232/Zotero/storage/8I9BQTGZ/structured-vs-unstructured-data.html}
+}
+
 @article{turing1950,
   title = {I.\textemdash{{COMPUTING MACHINERY AND IN}}TEL{{LIGENCE}}},
   author = {TURING, A. M.},
@@ -114,6 +204,21 @@
   pages = {29--40},
   publisher = {{Manchester}},
   file = {/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf}
+}
+
+@article{word2vec2013,
+  title = {Efficient {{Estimation}} of {{Word Representations}} in {{Vector Space}}},
+  author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  year = {2013},
+  month = sep,
+  journal = {arXiv:1301.3781 [cs]},
+  eprint = {1301.3781},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/I518232/Zotero/storage/7VB2EWHD/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Ve.pdf;/Users/I518232/Zotero/storage/8XHX2DDH/1301.3781.pdf;/Users/I518232/Zotero/storage/NLS24PG4/1301.html}
 }
 
 @article{zotero-1,
