CRISPDM and JSON Schema

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -13,5 +13,8 @@
 	\acro{BoW}{Bag of Words}
 	\acro{TF-IDF}{ferm frequency - inverse document frequency}	
 	\acro{CBOW}{Continuous Bag of Words}
+	\acro{JSON}{JavaScript Object Notation}
+	\acro{KDD}{Knowledge Discovery in Databases}
+	\acro{SEMMA}{Sample Explore Modify Model Assess}
 
 \end{acronym}
