--- a/Inhalt/04_Inhalt/practical.tex
+++ b/Inhalt/04_Inhalt/practical.tex
@@ -1,13 +1,15 @@
 \chapter{Practical Implementation}
 
 \section{Dataset selection}
-
+	T
+	
 \section{Data preparation}
+	The data is available as a local folder of size 5.12 GB, it contains 152,592 \ac{JSON} files.
 
 	\subsection{Data processing and data wrangling}
 	\lstinputlisting[
 	label=code:WhileLoop,    % Label; genutzt für Referenzen auf dieses Code-Beispiel
-	caption=Algorithmus zum Schätzen einer Zahl in Python,
+	caption=Shortened JSON Schema of one invoice document representation,
 	captionpos=b,               % Position, an der die Caption angezeigt wird t(op) oder b(ottom)
 	style=EigenerPythonStyle,   % Eigener Style der vor dem Dokument festgelegt wurde
 	firstline=0,                % Zeilennummer im Dokument welche als erste angezeigt wird
