--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -49,6 +49,27 @@
   file = {/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf}
 }
 
+@misc{CRISPDMPoll,
+  title = {{{CRISP-DM}}, Still the Top Methodology for Analytics, Data Mining, or Data Science Projects},
+  author = {{says}, Esport},
+  journal = {KDnuggets},
+  abstract = {CRISP-DM remains the most popular methodology for analytics, data mining, and data science projects, with 43\% share in latest KDnuggets Poll, but a replacement for unmaintained CRISP-DM is long overdue.},
+  chapter = {2014 Oct News, Features},
+  langid = {american},
+  file = {/Users/I518232/Zotero/storage/HC5XIX9T/crisp-dm-top-methodology-analytics-data-mining-data-science-projects.html}
+}
+
+@misc{CRISPDMPopular2020,
+  title = {{{CRISP-DM}} Is {{Still}} the {{Most Popular Framework}} for {{Executing Data Science Projects}}},
+  author = {Saltz, Jeff},
+  year = {2020},
+  month = nov,
+  journal = {Data Science Process Alliance},
+  abstract = {Based on a recent poll conducted on our site, CRISP-DM remains as the most popular framework for data science projects.},
+  langid = {american},
+  file = {/Users/I518232/Zotero/storage/VCIPKW2Y/crisp-dm-still-most-popular.html}
+}
+
 @book{epsteinParsingTuringTest2008,
   title = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
   shorttitle = {Parsing the Turing Test},
@@ -92,6 +113,24 @@
   journal = {Juergen Mueller biography},
   howpublished = {https://www.sap.com/about/company/leadership/juergen-mueller.html},
   langid = {english}
+}
+
+@incollection{KanbanAnderson,
+  booktitle = {{Kanban}},
+  author = {Anderson, David},
+  year = {2011},
+  edition = {1st edition},
+  abstract = {erstes deutsches Buch zu Kanban Buch vom "Vater" von Kanban geschrieben Kanban ist "hype", gut mit Scrum in Projekten einzusetzen* \"Ubersetzer in der (agilen) Community sehr bekannt(haben die ersten Kanban-Schulungen in D mit David J. Anderson durchgef\"uhrt)},
+  langid = {eng;ger},
+  keywords = {Electronic books}
+}
+
+@article{KDD,
+  title = {From {{Data Mining}} to {{Knowledge Discovery}} in {{Databases}}},
+  author = {Fayyad, Usama},
+  pages = {18},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/LEN9UCDZ/Fayyad - From Data Mining to Knowledge Discovery in Databas.pdf}
 }
 
 @article{kochEInvoicingJourney,
@@ -167,6 +206,17 @@
   year = {2017},
   month = jul,
   langid = {german}
+}
+
+@misc{SCRUMSolo,
+  title = {Scrum and the {{Solo Dev}}},
+  author = {Gant, Michael},
+  year = {2019},
+  month = jun,
+  journal = {Medium},
+  abstract = {Can a solo developer follow a Scrum process? Google it, you'll get a few different answers. Here's mine.},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/X4YGSRA7/scrum-and-the-solo-dev-fb8e810ed42b.html}
 }
 
 @misc{structuredAndUnstructuredData,
