--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -1,6 +1,12 @@
 \chapter{Fundamentals}
 \section{Glossary of Terms}
 
+	\subparagraph{Clustering Algorithm} is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
+	\subparagraph{\ac{NLP}}is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	\subparagraph{Data Cleaning}
+	\subparagraph{Data Wrangling}
+	\subparagraph{Feature Extraction}
+
 	\begin{itemize}
 		\item SAP SE
 		\item SAP Leonardo MLF
@@ -50,9 +56,6 @@ The three major ways of learning even with previously defined behavior can now b
 
 \subsection{Clustering Algorithms}
 multinomial, one bad example for a clustering would be the closest 5 docs to each one (this is multilabel)
-
-\subsection{Natural Language Processing}
-\ac{NLP} is often attributed to the computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
 
 \section{SAP AI Core}
 \subsection{Docker}
