--- a/Inhalt/04_Inhalt/theoretical.tex
+++ b/Inhalt/04_Inhalt/theoretical.tex
@@ -1,19 +1,22 @@
 \chapter{Theoretical Implementation}
 
 \section{Dataset selection}
+Which datasets are available?
 
-\section{Data Retrieval}
 
 \section{Business Understanding}
 
 \section{Data Understanding}
 
-	\includegraphics[height=8cm]{Bilder/data_model.png}
+
 
 \section{Data preparation}
 
 \subsection{Data processing and data wrangling}
-
+Explain the structure of one invoice.
+Explain which data structures I want to use.
+\includegraphics[height=8cm]{Bilder/data_model.png}
+Explain how I want to store the data. Explain the successive artifacts.
 
 \subsection{Data cleaning}
 
