--- a/Inhalt/04_Inhalt/Objectives and Criteria.tex
+++ b/Inhalt/04_Inhalt/Objectives and Criteria.tex
@@ -5,7 +5,7 @@ The goal of the thesis is to add value to real business documents by aggregating
 The task is to perform a full data analysis on the supplied dataset. The dataset is to be prepared for processing with established methods. An evaluation for different means of feature extraction, machine learning, model evaluation and visualization should be performed. With the evaluation a complete flow for the data processing should be presented. The result should be an added value to the dataset in the form of aggregated expenses.
 
 \section{Criteria set by SAP SE}
-none?
+The analysis should be performed utilizing only available resources, which are the student’s company laptop and already available instances for SAP internal services.
 
 \section{Research Model}
 
