practical part preprocessing

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -16,5 +16,6 @@
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
+	\acro{GIL}{Global Interpreter Lock}
 
 \end{acronym}
