--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -42,6 +42,14 @@
   doi = {10.1002/aris.1440370103}
 }
 
+@book{corePython,
+  title = {Core Python Programming},
+  author = {Chun, Wesley},
+  year = {2001},
+  volume = {1},
+  publisher = {{Prentice Hall Professional}}
+}
+
 @inproceedings{CRISPDM2000,
   title = {{{CRISP-DM}} 1.0: {{Step-by-step}} Data Mining Guide},
   author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
