--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -17,5 +17,6 @@
 	\acro{KDD}{Knowledge Discovery in Databases}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
 	\acro{GIL}{Global Interpreter Lock}
+	\acro{NLTK}{Natural Language Toolkit}
 
 \end{acronym}
