--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -97,6 +97,18 @@
 %\include{Inhalt/04_Inhalt/mathematische-formeln}
 %\include{Inhalt/04_Inhalt/quellcode}
 %\include{Inhalt/04_Inhalt/literaturHinweis}
+\include{Inhalt/04_Inhalt/content_dataset_selection.tex}
+\include{Inhalt/04_Inhalt/content_business_understanding.tex}
+\include{Inhalt/04_Inhalt/content_data_understanding.tex}
+\include{Inhalt/04_Inhalt/content_data_preparation.tex}
+\include{Inhalt/04_Inhalt/content_modelling.tex}
+\include{Inhalt/04_Inhalt/content_evaluation.tex}
+\include{Inhalt/04_Inhalt/content_deplyoment.tex}
+
+
+
+
+
 \include{Inhalt/04_Inhalt/introduction.tex}
 \include{Inhalt/04_Inhalt/Objectives and Criteria.tex}
 \include{Inhalt/04_Inhalt/fundamentals.tex}
