--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -97,24 +97,27 @@
 %\include{Inhalt/04_Inhalt/mathematische-formeln}
 %\include{Inhalt/04_Inhalt/quellcode}
 %\include{Inhalt/04_Inhalt/literaturHinweis}
-\include{Inhalt/04_Inhalt/content_dataset_selection.tex}
-\include{Inhalt/04_Inhalt/content_business_understanding.tex}
-\include{Inhalt/04_Inhalt/content_data_understanding.tex}
-\include{Inhalt/04_Inhalt/content_data_preparation.tex}
-\include{Inhalt/04_Inhalt/content_modelling.tex}
-\include{Inhalt/04_Inhalt/content_evaluation.tex}
-\include{Inhalt/04_Inhalt/content_deplyoment.tex}
-
-
-
-
 
 \include{Inhalt/04_Inhalt/introduction.tex}
 \include{Inhalt/04_Inhalt/Objectives and Criteria.tex}
 \include{Inhalt/04_Inhalt/fundamentals.tex}
-\include{Inhalt/04_Inhalt/alternatives.tex}
-\include{Inhalt/04_Inhalt/theoretical.tex}
-\include{Inhalt/04_Inhalt/practical.tex}
+
+\include{Inhalt/04_Inhalt/content_dataset_selection.tex}
+\include{Inhalt/04_Inhalt/content_business_understanding.tex}
+\include{Inhalt/04_Inhalt/content_data_understanding.tex}
+\include{Inhalt/04_Inhalt/content_data_preparation.tex}
+\include{Inhalt/04_Inhalt/content_modeling.tex}
+\include{Inhalt/04_Inhalt/content_evaluation.tex}
+\include{Inhalt/04_Inhalt/content_deployment.tex}
+
+
+
+
+
+
+%\include{Inhalt/04_Inhalt/alternatives.tex}
+%\include{Inhalt/04_Inhalt/theoretical.tex}
+%\include{Inhalt/04_Inhalt/practical.tex}
 \include{Inhalt/04_Inhalt/Evaluation.tex}
 \include{Inhalt/04_Inhalt/Outlook.tex}
 % ---- Literaturverzeichnis
